成功配置spring boot下mybatis多源数据配置

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,8 @@
 
 spring:
+  jackson:
+    date-format: yyyy-MM-dd HH:mm:ss
+    time-zone: GMT+8
   http:
     encoding:
       charset: utf-8
@@ -19,5 +22,11 @@ spring:
 logging:
   level:
     cn.gdchent.springbootmybatismultidatasource: debug
+
+mybatis:
+  configuration:
+    mapUnderscoreToCamelCase: true
+
 server:
   port: 8888
+
