--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,32 +1,3 @@
-
 spring:
-  jackson:
-    date-format: yyyy-MM-dd HH:mm:ss
-    time-zone: GMT+8
-  http:
-    encoding:
-      charset: utf-8
-      force: false
-      enabled: true
-  datasource:
-    primary:
-      jdbc-url: jdbc:mysql://localhost/gdchent?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
-      username: root
-      password: gdchent0330
-      driver-class-name: com.mysql.cj.jdbc.Driver
-    secondary:
-      jdbc-url: jdbc:mysql://localhost/gdchent2?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
-      username: root
-      password: gdchent0330
-      driver-class-name: com.mysql.cj.jdbc.Driver
-logging:
-  level:
-    cn.gdchent.springbootmybatismultidatasource: debug
-
-mybatis:
-  configuration:
-    mapUnderscoreToCamelCase: true
-
-server:
-  port: 8888
-
+   profiles:
+     active: dev
